# ethglobalsearch

./: README.md  Readme.md
backend/: Dockerfile  Makefile
backend/download/: download.py  fill_search.py  pyproject.toml
backend/migration/: 000000_init.down.sql  000000_init.up.sql  000001_similarity.down.sql  000001_similarity.up.sql
backend/server/: .gitignore  api.py  chat_output  filldb.py  main.py  pyproject.toml  test.sh  test2.sh  test2_remote.sh  test3.sh  test_chat.sh  test_graph.sh  test_similar.sh
backend/server/services/: _download.py  _fill_db.py  _fill_search.py  _fill_similarity.py  download.gql  download_hackathons.gql  download_links.gql  download_query.gql  scheduler.py
frontend/: Dockerfile  bun.lockb  next.config.ts  package.json
frontend/src/: pageData.tsx
frontend/src/app/: FeaturedFinalists.tsx  SearchComponent.tsx  globals.css  layout.tsx  not-found.tsx  page.tsx
frontend/src/app/api/chat/: route.ts
frontend/src/app/api/graph/: route.ts
frontend/src/app/chat/: actions.ts  page.tsx
frontend/src/app/graph/: page.tsx
frontend/src/app/search/: Graph.tsx  Pagination.tsx  ProjectCard.tsx  Projects.tsx  ProjectsGrid.tsx  SearchHeader.tsx  page.tsx
frontend/src/app/search/Graph/: GraphComponent.tsx  GraphRenderer.tsx  index.tsx
frontend/src/components/: Navbar.tsx  RenderedText.tsx  SearchBar.tsx
frontend/src/components/ui/: badge.tsx  button.tsx  card.tsx  carousel.tsx  command.tsx  dialog.tsx  dot-pattern.tsx  pagination.tsx  select.tsx
frontend/src/lib/: api.ts  chat-service.ts  zeroG.ts
(+8 files in other folders)
