[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "apscheduler>=3.11.1",
    "elasticsearch>=9.2.0",
    "fastapi>=0.121.3",
    "httpx>=0.28.1",
    "psycopg2>=2.9.11",
    "pydantic>=2.12.4",
    "uvicorn>=0.38.0",
]
